--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
  flink-master:
-   image: bde2020/flink-master:1.14.5-hadoop3.2
+   image: bde2020/flink-master
    hostname: flink-master
    container_name: flink-master
    ports:
@@ -9,7 +9,7 @@ services:
      - "8081:8081"
 
  flink-worker:
-   image: bde2020/flink-worker:1.14.5-hadoop3.2
+   image: bde2020/flink-worker
    hostname: flink-worker
    container_name: flink-worker
    environment:
